# billion-row-challenge

./: .gitignore  Cargo.toml  README.md
data-generator/: Cargo.toml
data-generator/src/: main.rs
solution/: Cargo.toml
solution/src/: main.rs  util.rs
